--- a/prueba1/index.html
+++ b/prueba1/index.html
@@ -9,5 +9,5 @@
 <body>
     <h1>por fin javascript</h1>
 </body>
-<script src="./scriptusuarios.js"></script>
+<script src="./operarNumeros.js"></script>
 </html>
