--- a/prueba 2 26.10/index.html
+++ b/prueba 2 26.10/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Por fin javascript</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>por fin javascript</h1>
+    <h1>vamos a bailar hoy</h1>
+    <script src="./concatenar.js"></script>
 </body>
-<script src="./opnumarr.js"></script>
 </html>
