--- a/prueba 2 26.10/index.html
+++ b/prueba 2 26.10/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>vamos a bailar hoy</h1>
-    <script src="./concatenar.js"></script>
+    <script src="./script7.js"></script>
 </body>
 </html>
