--- a/prueba 2 26.10/index.html
+++ b/prueba 2 26.10/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>vamos a bailar hoy</h1>
-    <script src="./script7.js"></script>
+    <h1>Gestion CLASE</h1>
+    <script src="./gestionclase.js"></script>
 </body>
 </html>
