--- a/prueba 2 26.10/index.html
+++ b/prueba 2 26.10/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Gestion CLASE</h1>
-    <script src="./gestionclase.js"></script>
+    <script src="./crearpersonas.js"></script>
 </body>
 </html>
