--- a/dom/mipagina.html
+++ b/dom/mipagina.html
@@ -12,11 +12,15 @@
     <div>
         <form>rellena aqui</form>
         <button>presiona aqui</button>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum architecto cum provident non ratione similique! Ipsum quibusdam illum doloremque sapiente minus quia recusandae iste optio! Quos a quaerat ipsum veritatis.</p>
+        <p id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum architecto cum provident non ratione similique! Ipsum quibusdam illum doloremque sapiente minus quia recusandae iste optio! Quos a quaerat ipsum veritatis.</p>
         </div>
+
+        <button id='cambiarbtn'>LOWER CASE</button>
+        <button>UPPER CASE</button>
+        <button>Sentence</button>
     </form>
     <textarea>Ole Ole Ole name="formulario" id=10 </textarea> 
 
-
-<link rel="stylesheet" href="gatitochurrito.css">
+<script src="scriptdom.js"></script>
+<link rel="stylesheet" href="gatito.css">
 </html>
