--- a/dom/mipagina.html
+++ b/dom/mipagina.html
@@ -21,6 +21,6 @@
     </form>
     <textarea>Ole Ole Ole name="formulario" id=10 </textarea> 
 
-<script src="scriptdom.js"></script>
+    <script src="botonesupperlower.js"></script>
 <link rel="stylesheet" href="gatito.css">
 </html>
