--- a/dom/index.html
+++ b/dom/index.html
@@ -11,7 +11,7 @@
         <h2 id ='parrafo'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde eveniet, placeat tenetur nihil facere quisquam aliquam reiciendis eum ratione id, quo vel itaque necessitatibus aperiam dolorum eligendi, aut modi aspernatur?</h2>
 <button>"cambiarbtn"</button>
 </body>
-<script src="scriptdom.js"></script>
+<script src="debugging.js"></script>
 </html>
 
 
