--- a/JQUERY/index.html
+++ b/JQUERY/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>jquery</title>
 </head>
+
 <body>
     <h1>jquery</h1>
     <ul>amigos</ul>
+    <li>Ricardo</li> <button id="Ricardo"> Ricardo</button>
+    <li>Cristina</li> <button id="Cristina"> Cristina</button>
+    <li>Carlos</li> <button id="Carlos"> Carlos</button>
+    <li>Borja</li> <button id="Borja"> Borja</button>
+    <button id="holabtn"> Decir Hola</button>
+
+    
+
+
 </body>
 <link rel="stylesheet" href="style.css">
 <script src="./jquery-3.3.1.min.js"></script>
 <script src="java.js"></script>
+
 </html>
