--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>AJAX</h1>
-    <ul id="amigos"></ul>
+    <ul id="post"></ul>
+    <button id="Cargarbtn">Cargar</button> 
 </body>
 <script src="./java.js"></script>
 <script src="./jquery-3.3.1.min.js"></script>
