--- a/JQUERY/index.html
+++ b/JQUERY/index.html
@@ -17,12 +17,10 @@
     <li>Borja</li> <button id="Borja"> Borja</button>
     <button id="holabtn"> Decir Hola</button>
 
-    
-
 
 </body>
 <link rel="stylesheet" href="style.css">
 <script src="./jquery-3.3.1.min.js"></script>
-<script src="java.js"></script>
+<script src="funcionbuena.js"></script>
 
 </html>
