--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HOLA AJAX</title>
-<link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <h1>AJAX</h1>
-    <ul id="post"></ul>
-    <button id="Cargarbtn">Cargar</button> 
+    <h1>ajax</h1>
+
+    <h2>face</h2>
+
+    <ul id='amigosface'></ul>
+
+    <h3>spoty</h3>
+    <ul id='amigosspoty'></ul>
+
+
+    <button id='cargarbtnface'>Cargar amigos face</button>
+    <button id='cargarbtnspoty'>Cargar amigos spoty</button>
+
 </body>
-<script src="./java.js"></script>
 <script src="./jquery-3.3.1.min.js"></script>
+<script src="./funcionbuena.js"></script>
+
 </html>
